2006-10-05  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/background-manager.c: Initialize pointers
	  given to gdk_pixbuf_render_pixmap_and_mask_for_colormap to NULL

2006-10-05  Johan Bilien <johan.bilien@nokia.com>

	* hildon-status-bar/hildon-status-bar-main.c: Load the icon from
	  the icon theme, not from the stock icons

2006-10-05  Johan Bilien <johan.bilien@nokia.com>

	* hildon-status-bar/hildon-status-bar-main.[ch]: Use a GtkImage instead
	  of an arrow for the arrow button

2006-10-05  Moises Martinez <moises.martinzes@nokia.com>

	* maemo-af-desktop-main.c: Cleanup.
	* hildon-navigator/hildon-navigator-window.c: Moved most part
	of init to constructor.

2006-10-05  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.94

2006-10-04  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-window.c:
	  - display layout help in layout mode, and in a dialog

2006-10-04  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-window.c:
	  - Removed dimming which came back from merging background patch
	  - Re-change TILED and STRETCHED order (same reason)

2006-10-04  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-others-button.c: Fixed creation of menus directory

2006-10-04  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-window.c: CP applets launched from home
	  are now system-modal. Fixes: NB#23451

2006-10-04  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-app-tooltip.c: Fit the tooltip within the screen
	  Fixes: NB#42275

2006-10-04  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.93

2006-10-04  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-navigator/hn-item-dummy.c: Show the child!!!
	* hildon-navigator/hildon-navigator-item.c: Removed widget
	private member, using now GtkBin child public member
	* hildon-navigator/hildon-navigator-item.h: Added size of
	buttons

2006-10-04  Johan Bilien <johan.bilien@nokia.com>
