@@ -1,5 +1,12 @@
 2006-10-05  Johan Bilien <johan.bilien@nokia.com>
 
+	* hildon-home/hildon-home-applet.c:
+	  - make the applet's widget unsensitive when in layout mode
+	    Fixes: NB#
+	  - added key_press and key_release to discard these events in layout mode
+
+2006-10-05  Johan Bilien <johan.bilien@nokia.com>
+
 	* hildon-home/background-manager.c: Initialize pointers
 	  given to gdk_pixbuf_render_pixmap_and_mask_for_colormap to NULL
 
